plang/testing/logs/false-incorrect/30/program30.p.p
tpOkH Db3 t (AQ) :- (q2If (jR v2k (p (Ftbh)) (MGHj)) (ml (n) IBB) MA j6a1); crr, w5th (CU) SpLs k, irA (fko (PWJb)) (vBZ), i8lIW RVc (va) (a VAv (C)), u0; icE3C (wB) LCcV Xw4 ebJ5; ((d6Uj (qIA (Xv6N) HL3 (Tqu55) eyV) di)); yozD WIZ (V9e).


hy8 (mn5 HIKr Ex9O (fSlM (aoPG QyI3) A viB) (g (Pb) (nLNCt) (a3eS6 g7 (Vby0P) NLA (a4WI qq PkqW (dpST (VXku)))))).
cHC (xg (ewR8 (Nm) w3 RwK (JSr)) J N4 (iao J K (Xgga))).
d6 H DyVF (B) :- (qFF (ebWz) (nU4O) R); (i (W0x) (q2 (AmT3) ZHPF) (nW5O (DS50F) C (nzhNW (Uw7fv) x4Ju)), qv828 (hmnIC D) X, vKZG (jeDW (s6) bwYC (G93g)) (DxLL9); ielz (zS vMxy) iSQUg (c96 (SLuIv) p uBd)), vX3w (h crdRg (H) (r (YkN) (g) lC U6V)) (zX5xr yBu) (H7).
aqUH HU E.

o2 A9 K (OC3B) (S).


sEW AMFOx (n s r0R (hYss CBbw) t) (dw i C (FvL) (AJb)) :- x2A4j (gFy) amhxk (HuqF) (ze (yOZG (oXAdT (V) (h elx) A) (e lR) CEi) (KMH) (Fyd6k) (N2nC)), r (T5vY) ix79.
rpBu B (NA) (D3dJq) :- (p8F (TOb) (PAHHT) WDvO; s7r (rP5y (pnYc3 (TLoQ) (Ta) oOU6 (Z))) Hme, gjkR (WCO) (rlq (o) gIiW i), ef9 DYZ, fPuTe (Dq) U5yE; wKWPL Tj (bOsW (Omuy) (Z)) Idzpk (rW)).

bmx8 ER (t (k (Ox) (On) zi v)) ra :- gPz.

aNf (BPWB).

uiz2 F1eZH IcQz (BaDI) (sV (M)) :- tbaa (xxwwQ (G6)) (XQQyN) (rht (o G (eSRuQ (cqQ wyP2) (mz8))) (j6KcP (I))); ((v JGwSq (MobF) FIoSp); k (J08) (k4NEM (vQ onj8S (P)) w s46ET (X13A)) (iW)).


k.

m.


q3.


bT (ozp (KV1CL)) :- (d6DMi s0 hC VX igVQ); (mB k KG2t (YLZQX)); (gY), sGJ0 (u (DP)) G6 asqZz, pEmSx DlT5o F nPnh (JlMH), v7Dp (mX dWhh4 Sl); (jf pdKfO (GKm) (m8lxK (Gkr)) (fM DI eh0z), jpuhz ZRizm (nt (b (Gk7i) (hOcz Wne)) (ec4EX) X L)); (exw9; q988 OGBQi GNU (yH (fNFPd (Hp) (np F0A4F) (ZPOt) H5pRs)) (sb (ZXRyn) (r fxOv (lBr3w (Sn8v) zD (c4j aOiB HK)) (Rz)))), (w jG (pRZ jG Rg gn Zu4Cm)).

t (wR4c (anr76 (Y) (S6)) (e9M)) (TOO).


nDpRN.


? y (B); ow1cb iA Yy.

